Added Program Details and Support Details

--- a/index.html
+++ b/index.html
@@ -136,6 +136,66 @@
                     </tbody>
                 </table>
             </div>
+            <div class="text-center"  style="padding-top: 10%;">
+                <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Program Details</h2>
+                <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>
+
+                <h6> Date: 05<sup>th</sup> December 2022 (Sunday)</h6>
+                <h6>Venue:  Main Conference Venue, IIIT Hyderabad</h6>   
+            </div>
+            <div class="workshop_discussion text-center" style="padding-top: 5%" >
+                <table>
+                    <thead>
+                        <tr>													
+                            <th>Time</th>
+                            <th>Event</th>
+                        </tr>       
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> 9.15 am IST- 9.30am IST </td>
+                            <td> Opening Session </td>
+                        </tr>
+                        <tr>
+                            <td> 10.00 am IST- 10.45 am IST </td>
+                            <td> Keynote speaker 1 </td>
+                        </tr>
+                        <tr>
+                            <td> 10.45 am IST- 11.00 am IST </td>
+                            <td> Tea Break </td>
+                        </tr>
+                        <tr>
+                            <td> 11.00 am IST- 11.45 pm IST </td>
+                            <td> Panel Discussion 1 </td>
+                        </tr>
+                        <tr>
+                            <td> 11.45 pm IST- 12.30 pm IST </td>
+                            <td> Poster Session cum Lunch Break </td>
+                        </tr>
+                        <tr>
+                            <td> 2.00 pm IST- 3.00 pm IST </td>
+                            <td> Keynote Session 2 </td>
+                        </tr>
+                        <tr>
+                            <td> 3.00 pm IST- 3.30 pm IST </td>
+                            <td> Bhashini Team/ Meity </td>
+                        </tr>
+                        <tr>
+                            <td> 3.30 pm IST- 4.30 pm IST </td>
+                            <td> Startup Presentations </td>
+                        </tr>
+                        <tr>
+                            <td> 4.30 pm IST- 5.00 pm IST </td>
+                            <td> Breakout Session </td>
+                        </tr>
+                        <tr>
+                            <td> 5.00 pm IST- 5.30 pm IST </td>
+                            <td> Concluding Session </td>
+                        </tr>
+                      
+                    </tbody>
+                </table>
+            </div>
         </div>
     </section>
 
@@ -167,6 +227,9 @@
              <div class="workshop_content">
                  ➼ WIDAFIL 2022 will follow a double-blind review process. Authors should not include their names or affiliations anywhere in the manuscript.
              </div>
+             <div class="workshop_content ">
+                 ➼ Team size of Authors should be of <b>maximum of 3 individuals</b>
+             </b>
             <div class="workshop_content">
                  ➼ Each abstract submission requires at least one author to have performed an <b>ICFHR 2022 onsite registration as author or student whichever is suitable for the purpose.</b>
              </div>
@@ -189,9 +252,9 @@
                 ➼ The author response phase will take place after the first round of reviews. It is optional and meant to provide authors with an opportunity to correct factual errors in a review, or to supply additional information as requested by reviewers. It is not intended as an opportunity to add new contributions.
             </div>
 
-            <p></p>
 
-            <div class="masthead-subheading"><b>IAPR Ethical Requirements for Authors</b></div>
+            <div class="masthead-subheading" style="padding-top: 5%;"><b>IAPR Ethical Requirements for Authors</b></div>
+            <br>
             <p>The IAPR requires that all authors wishing to present a paper declare that:</p>
             <div class="workshop_content">
                ➼ The paper is substantially original and that no paper substantially similar in content has been submitted or will be submitted to any other conference or journal during the review period.
@@ -208,6 +271,21 @@
             <div class="workshop_content">
                ➼ The full statement of IAPR ethical requirements for authors may be found at this <a href="http://www.iapr.org/constitution/soe.php" target=”_blank” style="text-decoration: none;">link</a>
             </div>
+
+            
+            <div class="masthead-subheading" style="padding-top: 5%;"><b>Support</b></div>
+            <br>
+            <div class="workshop_content">
+                ➼ Scholarships are to be provided for the authors who potentially need financial assistance for Registration, Accomodation and Travel
+             </div>
+             <div class="workshop_content">
+                ➼ The Accomodation and other details would be updated soon
+             </div>
+             <div class="workshop_content">
+                ➼ Note that Scholarships would be provided as a team and not per inidividual in a team
+             </div>
+             <br>
+            <iframe  src="https://docs.google.com/forms/d/e/1FAIpQLSdPLoiAQqGeCmTTsv0hyAJ33UQq3pj-6dFkCMb2QMpATUxAoA/viewform?embedded=true" width="1200" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </section>
 
