Adding submission and accommodation details

--- a/index.html
+++ b/index.html
@@ -136,66 +136,66 @@
                     </tbody>
                 </table>
             </div>
-            <div class="text-center"  style="padding-top: 10%;">
-                <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Program Details</h2>
-                <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>
+<!--            <div class="text-center"  style="padding-top: 10%;">-->
+<!--                <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Program Details</h2>-->
+<!--                <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>-->
 
-                <h6> Date: 05<sup>th</sup> December 2022 (Sunday)</h6>
-                <h6>Venue:  Main Conference Venue, IIIT Hyderabad</h6>   
-            </div>
-            <div class="workshop_discussion text-center" style="padding-top: 5%" >
-                <table>
-                    <thead>
-                        <tr>													
-                            <th>Time</th>
-                            <th>Event</th>
-                        </tr>       
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> 9.15 am IST- 9.30am IST </td>
-                            <td> Opening Session </td>
-                        </tr>
-                        <tr>
-                            <td> 10.00 am IST- 10.45 am IST </td>
-                            <td> Keynote speaker 1 </td>
-                        </tr>
-                        <tr>
-                            <td> 10.45 am IST- 11.00 am IST </td>
-                            <td> Tea Break </td>
-                        </tr>
-                        <tr>
-                            <td> 11.00 am IST- 11.45 pm IST </td>
-                            <td> Panel Discussion 1 </td>
-                        </tr>
-                        <tr>
-                            <td> 11.45 pm IST- 12.30 pm IST </td>
-                            <td> Poster Session cum Lunch Break </td>
-                        </tr>
-                        <tr>
-                            <td> 2.00 pm IST- 3.00 pm IST </td>
-                            <td> Keynote Session 2 </td>
-                        </tr>
-                        <tr>
-                            <td> 3.00 pm IST- 3.30 pm IST </td>
-                            <td> Bhashini Team/ Meity </td>
-                        </tr>
-                        <tr>
-                            <td> 3.30 pm IST- 4.30 pm IST </td>
-                            <td> Startup Presentations </td>
-                        </tr>
-                        <tr>
-                            <td> 4.30 pm IST- 5.00 pm IST </td>
-                            <td> Breakout Session </td>
-                        </tr>
-                        <tr>
-                            <td> 5.00 pm IST- 5.30 pm IST </td>
-                            <td> Concluding Session </td>
-                        </tr>
-                      
-                    </tbody>
-                </table>
-            </div>
+<!--                <h6> Date: 05<sup>th</sup> December 2022 (Sunday)</h6>-->
+<!--                <h6>Venue:  Main Conference Venue, IIIT Hyderabad</h6>   -->
+<!--            </div>-->
+<!--            <div class="workshop_discussion text-center" style="padding-top: 5%" >-->
+<!--                <table>-->
+<!--                    <thead>-->
+<!--                        <tr>													-->
+<!--                            <th>Time</th>-->
+<!--                            <th>Event</th>-->
+<!--                        </tr>       -->
+<!--                    </thead>-->
+<!--                    <tbody>-->
+<!--                        <tr>-->
+<!--                            <td> 9.15 am IST- 9.30am IST </td>-->
+<!--                            <td> Opening Session </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 10.00 am IST- 10.45 am IST </td>-->
+<!--                            <td> Keynote speaker 1 </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 10.45 am IST- 11.00 am IST </td>-->
+<!--                            <td> Tea Break </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 11.00 am IST- 11.45 pm IST </td>-->
+<!--                            <td> Panel Discussion 1 </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 11.45 pm IST- 12.30 pm IST </td>-->
+<!--                            <td> Poster Session cum Lunch Break </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 2.00 pm IST- 3.00 pm IST </td>-->
+<!--                            <td> Keynote Session 2 </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 3.00 pm IST- 3.30 pm IST </td>-->
+<!--                            <td> Bhashini Team/ Meity </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 3.30 pm IST- 4.30 pm IST </td>-->
+<!--                            <td> Startup Presentations </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 4.30 pm IST- 5.00 pm IST </td>-->
+<!--                            <td> Breakout Session </td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td> 5.00 pm IST- 5.30 pm IST </td>-->
+<!--                            <td> Concluding Session </td>-->
+<!--                        </tr>-->
+<!--                      -->
+<!--                    </tbody>-->
+<!--                </table>-->
+<!--            </div>-->
         </div>
     </section>
 
@@ -210,7 +210,7 @@
                 ➼ WIDAFIL 2022 encourages the submission of papers that describe original work related to topics described in the <a href="#overview" style="text-decoration: none;">Overview</a> section.
             </div>
             <div class="workshop_content">
-                ➼ All WIDAFIL 2022 papers should be submitted via the Microsoft CMT Conference System. Please follow the instructions on the submission website carefully, to ensure that your paper has been submitted correctly. Final submission to be done <a href="https://cmt3.research.microsoft.com/WIDAFIL2022/Submission/Index"
+                ➼ All WIDAFIL 2022 papers should be submitted via the Microsoft CMT Conference System. Final submission to be done <a href="https://cmt3.research.microsoft.com/WIDAFIL2022/Submission/Index"
                 target=”_blank” style="text-decoration: none;">here</a>
             </div>
             <div class="workshop_content ">
@@ -222,55 +222,38 @@
                 target=”_blank” style="text-decoration: none;">here</a>
             </div>
             <div class="workshop_content">
-                ➼ If you encounter any problem during the paper submission process and cannot resolve it, please contact the Program Chairs.
-            </div>
-             <div class="workshop_content">
-                 ➼ WIDAFIL 2022 will follow a double-blind review process. Authors should not include their names or affiliations anywhere in the manuscript.
-             </div>
-             <div class="workshop_content ">
-                 ➼ Team size of Authors should be of <b>maximum of 3 individuals</b>
-             </b>
-            <div class="workshop_content">
                  ➼ Each abstract submission requires at least one author to have performed an <b>ICFHR 2022 onsite registration as author or student whichever is suitable for the purpose.</b>
              </div>
             <div class="workshop_content">
                  ➼ ICFHR 2022 registration details for the same are available <a href="http://icfhr2022.org/registration.php" target="_blank" style="text-decoration: none;">here</a>
              </div>
-            <div class="workshop_content">
-                 ➼ Reviewer names will also not be visible to authors.
-             </div>
-             <div class="workshop_content">
-                 ➼ Both submissions of new papers and updates of already submitted ones are welcome until the submission deadline.
-             </div>
              <div class="workshop_content">
                  ➼ <b>At least one author of each accepted paper MUST register the paper at full-rate.</b> Papers without a confirmed registration will be withdrawn by the conference organizers.
              </div>
-             <div class="workshop_content">
-                 ➼ Papers accepted for the conference will be allocated up to 8 pages in the proceedings, including references. <b>Submissions are expected to be 6-8 pages long.</b>
-             </div>
             <div class="workshop_content">
-                ➼ The author response phase will take place after the first round of reviews. It is optional and meant to provide authors with an opportunity to correct factual errors in a review, or to supply additional information as requested by reviewers. It is not intended as an opportunity to add new contributions.
+                 ➼ Please find detailed instructions for WIDAFIL 2022 submissions  <a href="https://docs.google.com/document/d/1wZ_cONdJXPbuM83-eqgNBgjRyaeI7lqWAS4xg9VkaGw/edit?usp=sharing" target="_blank" style="text-decoration: none;">here</a>
             </div>
 
 
-            <div class="masthead-subheading" style="padding-top: 5%;"><b>IAPR Ethical Requirements for Authors</b></div>
-            <br>
-            <p>The IAPR requires that all authors wishing to present a paper declare that:</p>
-            <div class="workshop_content">
-               ➼ The paper is substantially original and that no paper substantially similar in content has been submitted or will be submitted to any other conference or journal during the review period.
-            </div>
-            <div class="workshop_content">
-               ➼ The paper does not contain any plagiarism.
-            </div>
-            <div class="workshop_content">
-               ➼ The paper will be presented by the author or a co-author in person.
-            </div>
-            <div class="workshop_content">
-               ➼ The IAPR retains the right to eliminate any papers in violation of these requirements and to exclude the authors of such papers from future IAPR community activities.
-            </div>
-            <div class="workshop_content">
-               ➼ The full statement of IAPR ethical requirements for authors may be found at this <a href="http://www.iapr.org/constitution/soe.php" target=”_blank” style="text-decoration: none;">link</a>
-            </div>
+
+<!--            <div class="masthead-subheading" style="padding-top: 5%;"><b>IAPR Ethical Requirements for Authors</b></div>-->
+<!--            <br>-->
+<!--            <p>The IAPR requires that all authors wishing to present a paper declare that:</p>-->
+<!--            <div class="workshop_content">-->
+<!--               ➼ The paper is substantially original and that no paper substantially similar in content has been submitted or will be submitted to any other conference or journal during the review period.-->
+<!--            </div>-->
+<!--            <div class="workshop_content">-->
+<!--               ➼ The paper does not contain any plagiarism.-->
+<!--            </div>-->
+<!--            <div class="workshop_content">-->
+<!--               ➼ The paper will be presented by the author or a co-author in person.-->
+<!--            </div>-->
+<!--            <div class="workshop_content">-->
+<!--               ➼ The IAPR retains the right to eliminate any papers in violation of these requirements and to exclude the authors of such papers from future IAPR community activities.-->
+<!--            </div>-->
+<!--            <div class="workshop_content">-->
+<!--               ➼ The full statement of IAPR ethical requirements for authors may be found at this <a href="http://www.iapr.org/constitution/soe.php" target=”_blank” style="text-decoration: none;">link</a>-->
+<!--            </div>-->
 
             
             <div class="masthead-subheading" style="padding-top: 5%;"><b>Support</b></div>
@@ -279,7 +262,7 @@
                 ➼ Scholarships are to be provided for the authors who potentially need financial assistance for Registration, Accomodation and Travel
              </div>
              <div class="workshop_content">
-                ➼ The Accomodation and other details would be updated soon
+                ➼ The Accommodation details close to the venue are available <a href="https://docs.google.com/document/d/11dJGQzB_YG18-aIG1bo79KSGGpSveKSJmtev3GTvfJg/edit?usp=sharing" target="_blank" style="text-decoration: none;">here</a>
              </div>
              <div class="workshop_content">
                 ➼ Note that Scholarships would be provided as a team and not per inidividual in a team
