Adding marquee rolling text

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 
             </div>
             <a class="btn btn-primary text-uppercase" href="#overview">Explore</a>
+            <br><br><br>
+            <marquee> <p class="glow">NEW</p>
+                Opportunity to publish at Post-Workshop proceedings &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                Participation certificates for all authors  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                Scholarship and additional support available</marquee>
         </div>
     </header>
     <!-- Overview -->
