--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
                     <li class="nav-item"><a class="nav-link" href="#importantdates">Important Dates</a></li>
                     <li class="nav-item"><a class="nav-link" href="#submissions">Submissions</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#scholarship">Scholarship & Accomodation</a></li>
                     <li class="nav-item"><a class="nav-link" href="#organizers">Committee</a></li>
                     <li class="nav-item"><a class="nav-link" target="_blanck"
                             href="http://icfhr2022.org/index.php">ICFHR2022</a></li>
@@ -285,7 +286,7 @@
             <!--            </div>-->
 
 
-            <div class="masthead-subheading" style="padding-top: 5%;"><b>Support</b></div>
+            <div class="masthead-subheading" style="padding-top: 5%;" id="scholarship"><b>Support</b></div>
             <br>
             <div class="workshop_content">
                 ➼ Scholarships are to be provided for the authors who potentially need financial assistance for
