--- a/index.html
+++ b/index.html
@@ -155,66 +155,70 @@
                     </tbody>
                 </table>
             </div>
-            <!--            <div class="text-center"  style="padding-top: 10%;">-->
-            <!--                <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Program Details</h2>-->
-            <!--                <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>-->
+                        <div class="text-center"  style="padding-top: 10%;">
+                            <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Program Details</h2>
+                            <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>
 
-            <!--                <h6> Date: 05<sup>th</sup> December 2022 (Sunday)</h6>-->
-            <!--                <h6>Venue:  Main Conference Venue, IIIT Hyderabad</h6>   -->
-            <!--            </div>-->
-            <!--            <div class="workshop_discussion text-center" style="padding-top: 5%" >-->
-            <!--                <table>-->
-            <!--                    <thead>-->
-            <!--                        <tr>													-->
-            <!--                            <th>Time</th>-->
-            <!--                            <th>Event</th>-->
-            <!--                        </tr>       -->
-            <!--                    </thead>-->
-            <!--                    <tbody>-->
-            <!--                        <tr>-->
-            <!--                            <td> 9.15 am IST- 9.30am IST </td>-->
-            <!--                            <td> Opening Session </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 10.00 am IST- 10.45 am IST </td>-->
-            <!--                            <td> Keynote speaker 1 </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 10.45 am IST- 11.00 am IST </td>-->
-            <!--                            <td> Tea Break </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 11.00 am IST- 11.45 pm IST </td>-->
-            <!--                            <td> Panel Discussion 1 </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 11.45 pm IST- 12.30 pm IST </td>-->
-            <!--                            <td> Poster Session cum Lunch Break </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 2.00 pm IST- 3.00 pm IST </td>-->
-            <!--                            <td> Keynote Session 2 </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 3.00 pm IST- 3.30 pm IST </td>-->
-            <!--                            <td> Bhashini Team/ Meity </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 3.30 pm IST- 4.30 pm IST </td>-->
-            <!--                            <td> Startup Presentations </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 4.30 pm IST- 5.00 pm IST </td>-->
-            <!--                            <td> Breakout Session </td>-->
-            <!--                        </tr>-->
-            <!--                        <tr>-->
-            <!--                            <td> 5.00 pm IST- 5.30 pm IST </td>-->
-            <!--                            <td> Concluding Session </td>-->
-            <!--                        </tr>-->
-            <!--                      -->
-            <!--                    </tbody>-->
-            <!--                </table>-->
-            <!--            </div>-->
+                            <h6> Date: 04<sup>th</sup> December 2022 (Sunday)</h6>
+                            <h6>Venue:  Main Conference Venue, IIIT Hyderabad</h6>
+                        </div>
+                        <div class="workshop_discussion text-center" style="padding-top: 5%" >
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Time</th>
+                                        <th>Event</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td> 09:15 am IST- 09:30am IST </td>
+                                        <td> Opening Session </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 09:30 am IST- 10:30 am IST </td>
+                                        <td> Keynote speaker 1 </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 10:30 am IST- 11:30 am IST </td>
+                                        <td> Tea Break </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 11:00 am IST- 12:00 pm IST </td>
+                                        <td> Panel Discussion 1 </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 12:00 pm IST- 01:00 pm IST </td>
+                                        <td> Startup Presentations </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 01:00 pm IST- 02:00 pm IST </td>
+                                        <td> Lunch Break </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 02:00 pm IST- 03:00 pm IST </td>
+                                        <td> Keynote Session 2 </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 03:00 pm IST- 03:30 pm IST </td>
+                                        <td> Bhashini Team/ Meity </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 03:30 pm IST- 04:00 pm IST </td>
+                                        <td> Consortium Presentation </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 04:00 pm IST- 04:30 pm IST </td>
+                                        <td> Tea Break </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 04:30 pm IST onwards </td>
+                                        <td> Poster Session and Spotlight Sessions </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
         </div>
     </section>
 
