--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
                     <li class="nav-item"><a class="nav-link" href="#importantdates">Important Dates</a></li>
                     <li class="nav-item"><a class="nav-link" href="#submissions">Submissions</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#scholarship">Scholarship & Accomodation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#scholarship">Scholarship & Accommodation</a></li>
                     <li class="nav-item"><a class="nav-link" href="#organizers">Committee</a></li>
                     <li class="nav-item"><a class="nav-link" target="_blanck"
                             href="http://icfhr2022.org/index.php">ICFHR2022</a></li>
@@ -290,7 +290,7 @@
             <br>
             <div class="workshop_content">
                 ➼ Scholarships are to be provided for the authors who potentially need financial assistance for
-                Registration, Accomodation and Travel
+                Registration, Accommodation and Travel
             </div>
 
             <div class="workshop_content">
@@ -301,7 +301,7 @@
                 src="https://docs.google.com/forms/d/e/1FAIpQLSdPLoiAQqGeCmTTsv0hyAJ33UQq3pj-6dFkCMb2QMpATUxAoA/viewform?embedded=true"
                 width="1200" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-            <div class="masthead-subheading" style="padding-top: 5%;"><b>Accomodation</b>
+            <div class="masthead-subheading" style="padding-top: 5%;"><b>Accommodation</b>
                 Limited accommodation will be provided on IIIT Hyderabad Campus, a chargeable and first-come-first-serve
                 basis.
                 Hence register soon <a tartget='_blank' href="https://forms.gle/sLjLPTzawwNBY1Mt7">here</a>
