Final schedule updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a class="btn btn-primary text-uppercase" href="#overview">Explore</a>
             <br><br><br>
             <marquee>
-                <p class="glow">NEW</p>
+<!--                <p class="glow">NEW</p>-->
                 Opportunity to publish at Post-Workshop proceedings &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 Participation certificates for all authors &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 Scholarship and additional support available
@@ -173,22 +173,22 @@
                                     </tr>
                                     <tr>
                                         <td> 09:30 am IST- 10:30 am IST </td>
-                                        <td> Keynote speaker 1 </td>
+                                        <td> Keynote Speaker 1 </td>
                                     </tr>
                                     <tr>
-                                        <td> 10:30 am IST- 11:30 am IST </td>
+                                        <td> 10:30 am IST- 11:00 am IST </td>
                                         <td> Tea Break </td>
                                     </tr>
                                     <tr>
                                         <td> 11:00 am IST- 12:00 pm IST </td>
-                                        <td> Panel Discussion 1 </td>
-                                    </tr>
-                                    <tr>
-                                        <td> 12:00 pm IST- 01:00 pm IST </td>
                                         <td> Startup Presentations </td>
                                     </tr>
                                     <tr>
-                                        <td> 01:00 pm IST- 02:00 pm IST </td>
+                                        <td> 12:00 pm IST- 12:30 pm IST </td>
+                                        <td> Round Table Discussion </td>
+                                    </tr>
+                                    <tr>
+                                        <td> 12:30 pm IST- 02:00 pm IST </td>
                                         <td> Lunch Break </td>
                                     </tr>
                                     <tr>
@@ -197,7 +197,7 @@
                                     </tr>
                                     <tr>
                                         <td> 03:00 pm IST- 03:30 pm IST </td>
-                                        <td> Bhashini Team/ Meity </td>
+                                        <td> Meity Talk </td>
                                     </tr>
                                     <tr>
                                         <td> 03:30 pm IST- 04:00 pm IST </td>
