Updated the Schedule of WIDAFIL

--- a/index.html
+++ b/index.html
@@ -169,11 +169,15 @@
                                 <tbody>
                                     <tr>
                                         <td> 09:15 am IST- 09:30am IST </td>
-                                        <td> Opening Session </td>
+                                        <td> Inauguration by Special Guest <br>
+                                            <b>Dr. Swaran Lata</b><br>
+                                            Advisor, NLTM-PMU<br>
+                                            Former Sr. Director & Head TDIL, MeiTY, GOI
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td> 09:30 am IST- 10:30 am IST </td>
-                                        <td> Keynote Speaker 1 </td>
+                                        <td> Keynote session by <br> <b>Prof. Bidyut Baran Chaudhuri</b> <br> INAE Distinguished Professor and <br> J. C. Bose Fellow, Indian Statistical Institute </td>
                                     </tr>
                                     <tr>
                                         <td> 10:30 am IST- 11:00 am IST </td>
@@ -181,35 +185,31 @@
                                     </tr>
                                     <tr>
                                         <td> 11:00 am IST- 12:00 pm IST </td>
-                                        <td> Startup Presentations </td>
+                                        <td> Startup Presentations/ Interactions </td>
                                     </tr>
                                     <tr>
-                                        <td> 12:00 pm IST- 12:30 pm IST </td>
-                                        <td> Round Table Discussion </td>
+                                        <td> 12:00 pm IST- 12:45 pm IST </td>
+                                        <td> Round Table Discussion - Way Forward</td>
                                     </tr>
                                     <tr>
-                                        <td> 12:30 pm IST- 02:00 pm IST </td>
+                                        <td> 12:45 pm IST- 02:00 pm IST </td>
                                         <td> Lunch Break </td>
                                     </tr>
                                     <tr>
                                         <td> 02:00 pm IST- 03:00 pm IST </td>
-                                        <td> Keynote Session 2 </td>
+                                        <td> Keynote Session by <br> <b>Balaji Krishnamurthy</b> <br>Senior Principal Scientist, Adobe </td>
                                     </tr>
                                     <tr>
                                         <td> 03:00 pm IST- 03:30 pm IST </td>
-                                        <td> Meity Talk </td>
+                                        <td> Document Analysis for Indian Languages -<br><b>Current Research happening in Academia</b> <br>by OCR Consortium of Institutions  </td>
                                     </tr>
                                     <tr>
                                         <td> 03:30 pm IST- 04:00 pm IST </td>
-                                        <td> Consortium Presentation </td>
-                                    </tr>
-                                    <tr>
-                                        <td> 04:00 pm IST- 04:30 pm IST </td>
                                         <td> Tea Break </td>
                                     </tr>
                                     <tr>
-                                        <td> 04:30 pm IST onwards </td>
-                                        <td> Poster Session and Spotlight Sessions </td>
+                                        <td> 4.00 pm IST - 5.00 pm IST </td>
+                                        <td> Spotlight Sessions </td>
                                     </tr>
 
                                 </tbody>
