Updated the Schedule of WIDAFIL

--- a/index.html
+++ b/index.html
@@ -200,16 +200,12 @@
                                         <td> Keynote Session by <br> <b>Balaji Krishnamurthy</b> <br>Senior Principal Scientist, Adobe </td>
                                     </tr>
                                     <tr>
-                                        <td> 03:00 pm IST- 03:30 pm IST </td>
-                                        <td> Document Analysis for Indian Languages -<br><b>Current Research happening in Academia</b> <br>by OCR Consortium of Institutions  </td>
+                                        <td> 03:00 pm IST- 04:00 pm IST </td>
+                                        <td> <b>Current Research highlights in Academia</b> <br> through Spotligh sessions  </td>
                                     </tr>
                                     <tr>
-                                        <td> 03:30 pm IST- 04:00 pm IST </td>
-                                        <td> Tea Break </td>
-                                    </tr>
-                                    <tr>
-                                        <td> 4.00 pm IST - 5.00 pm IST </td>
-                                        <td> Spotlight Sessions </td>
+                                        <td> 04:00 pm IST- 04:30 pm IST </td>
+                                        <td> Tea Break and Ending Ceremony</td>
                                     </tr>
 
                                 </tbody>
