Updated Venue details

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <h5>  The workshop includes invited talks from eminent researchers and practitioners and a panel discussion. </h5>
 
                             <h6> Date: 04<sup>th</sup> December 2022 (Sunday)</h6>
-                            <h6>Venue:  Main Conference Venue, IIIT Hyderabad</h6>
+                            <h6>Venue:  <b>KRB Ground Floor, Meeting Room, IIIT Hyderabad</b></h6>
                         </div>
                         <div class="workshop_discussion text-center" style="padding-top: 5%" >
                             <table>
